# metalift

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README  README.md  actor_util.py  analysis.py  answer.rkt  artifact_readme.md  artifact_reame.md  auto_grammar.py  build_llvm_pass  cfg.py  ci-shell.nix  ci.nix  color_burn_8  color_burn_8.txt  color_burn_8_latest_gpt_model.txt  color_burn_8_latest_gpt_model_n50.txt  color_burn_8_latest_gpt_model_new_dsl.txt  color_burn_8_latest_gpt_model_new_dsl_n50.txt  color_burn_8_manual_test.txt  color_dodge_8.json  color_dodge_8.txt  compute.py  count_lines.sh  crdt-synthesis-iso.nix  cvc5.nix  darken_blend_8.json  darken_blend_8.txt  debug-clock.smt  demangle.py  dissolve_blend_8.txt  example.py  example2.py  (+90 more)
actors/: aci.py  broken_candidatesSMT_actor1_g_set_fixed.txt  lattices.py  search_structures.py  synthesis.py  synthesis_counterexamples.py
benchmarks/: README.md
blend_inv_claude/: color_burn_8.txt  color_dodge_8.txt  darken_blend_8.txt  dissolve_blend_8.txt  lighten_blend_8.txt  linear_burn_8.txt  linear_dodge_8.txt  multiply_blend_8.txt  normal_blend_8.txt  normal_blend_f.txt  overlay_blend_8.txt  screen_blend_8.txt
blend_inv_gpt_latest/: darken_blend_8.txt  dissolve_blend_8.txt  multiply_blend_8.txt  normal_blend_8.txt  normal_blend_f.txt
ci-util/: cache-nix.sh  write-cache-nar.sh
crdt_synthesis/: auto_grammar.py  lattices.py  search_structures.py  synthesis.py
crdt_tests/: compile-all  plot_distribution.py  sequential1.c  sequential1.ll  sequential1_clock.c  sequential1_clock.ll  sequential2.ll  sequential_flag.ll  sequential_flag.loops  sequential_register.ll  synthesize_crdt.py
custom_test/: fma.c  fma.ll  fma_driver.py  while3.c  while3.ll  while3.loops  while3_driver.py  while_addition.c  while_addition.ll  while_addition.loops  while_addition.py
docs/: docusaurus.config.js  package-lock.json
drafts/: overlay_div32_counts_with_constants_separate_ops_fixed_inv.rkt  overlay_div32_counts_with_constants_separate_ops_unfixed_inv.rkt  overlay_div32_fixed_inv.rkt  overlay_div32_unfixed_inv_optimized_loop_bound.rkt
example/: compiler.py  nested_loops.py  test.py  test_grammar.py  udo.py  unstructured_loop.py
frontend/: python.py
habana/: Dockerfile
headers/: array.h  list.h  matrix.h  tuples.h
lang/: base.rkt  ir-ctor.rkt  ir.rkt  parser.rkt  (+1 more)
(+4762 files in other folders)
