[tool.poetry]
name = "metalift"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyparsing = "^3.0.8"
llvmlite = { url = "https://github.com/metalift/llvmlite/archive/c418eb18a78f49d9a059c50bd992f732432b9fe5.zip" }

[tool.poetry.dev-dependencies]
mypy = "^0.950"
black = "22.3.0" # make sure to update ci.yml!
phmdoctest = "^1.4.0"
pytest-phmdoctest = "^1.0.0"
autoflake = "^1.4"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
^/tests|
^/website|
^/rosette-packages
'''
