[virtualenvs]
in-project = true

[installer]
no-binary = ["mypy"]

[tool.poetry]
name = "metalift"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyparsing = "^3.0.8"
llvmlite = "^0.39.1"
mypy = "^1.3.0"
regex = "2023.10.3"
networkx = "^2.6.3"

[tool.poetry.dev-dependencies]
black = "22.3.0" # make sure to update ci.yml!
phmdoctest = "^1.4.0"
pytest-phmdoctest = "^1.0.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
^/tests|
^/website|
^/rosette-packages
'''
