[virtualenvs]
in-project = true

[installer]
no-binary = ["mypy"]

[tool.poetry]
name = "metalift"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
anthropic = "*"
google-generativeai = "*"
h5py = "3.11.0"
llvmlite = "^0.39.1"
mypy = "^1.3.0"
networkx = "^2.6.3"
numpy = "1.26.2"
openai = "^1.56.1"
opencv-python = "*"
pydash = "*"
pyparsing = "^3.0.8"
python = ">=3.9,<3.11"
python-dotenv = "^1.0.1"
regex = "2023.10.3"
tensorflow = "2.15"
torch = "2.1.2"
transformers = "*"
tree-sitter = "0.21.3"
tree-sitter-languages = "^1.10.2"

[tool.poetry.dev-dependencies]
black = "22.3.0" # make sure to update ci.yml!
phmdoctest = "^1.4.0"
pytest-phmdoctest = "^1.0.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
extend-exclude = '''
^/tests|
^/website|
^/rosette-packages
'''
